crates/spicy_parser/src/snapshots/spicy_parser__parser__tests__parser-basic_op.snap
---
source: crates/spicy_parser/src/parser.rs
expression: deck
---
Deck {
    title: "basic operating point",
    commands: [
        Op(
            OpCommand {
                span: Span {
                    start: 63,
                    end: 65,
                },
            },
        ),
    ],
    devices: [
        Resistor(
            Resistor {
                name: "R1",
                span: Span {
                    start: 22,
                    end: 34,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 10.0,
                    exponent: None,
                    suffix: Some(
                        Kilo,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        CurrentSource(
            IndependentSource {
                name: "I1",
                positive: Node {
                    name: "out",
                },
                negative: Node {
                    name: "0",
                },
                dc: Some(
                    Constant(
                        Value {
                            value: 1.0,
                            exponent: None,
                            suffix: Some(
                                Milli,
                            ),
                        },
                    ),
                ),
                ac: None,
            },
        ),
        Capacitor(
            Capacitor {
                name: "C1",
                span: Span {
                    start: 51,
                    end: 61,
                },
                positive: Node {
                    name: "out",
                },
                negative: Node {
                    name: "0",
                },
                capacitance: Value {
                    value: 1.0,
                    exponent: None,
                    suffix: Some(
                        Micro,
                    ),
                },
                mname: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                ic: None,
            },
        ),
    ],
}
