crates/spicy_parser/src/snapshots/spicy_parser__parser__tests__parser-basic_resistor.snap
---
source: crates/spicy_parser/src/parser.rs
expression: deck
---
Deck {
    title: "basic resistor",
    commands: [],
    devices: [
        Resistor(
            Resistor {
                name: "R1",
                span: Span {
                    start: 15,
                    end: 26,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 1.0,
                    exponent: None,
                    suffix: Some(
                        Kilo,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R2",
                span: Span {
                    start: 28,
                    end: 44,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "0",
                },
                resistance: Value {
                    value: 1.1234,
                    exponent: None,
                    suffix: Some(
                        Tera,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R3",
                span: Span {
                    start: 46,
                    end: 58,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: -10.0,
                    exponent: None,
                    suffix: None,
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R4",
                span: Span {
                    start: 60,
                    end: 71,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 0.5,
                    exponent: None,
                    suffix: None,
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R5",
                span: Span {
                    start: 73,
                    end: 86,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 1.25,
                    exponent: None,
                    suffix: None,
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R6",
                span: Span {
                    start: 88,
                    end: 102,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 2.5,
                    exponent: Some(
                        3.0,
                    ),
                    suffix: None,
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R6",
                span: Span {
                    start: 104,
                    end: 118,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 2.5,
                    exponent: Some(
                        3.0,
                    ),
                    suffix: None,
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R7",
                span: Span {
                    start: 120,
                    end: 135,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 2.5,
                    exponent: Some(
                        -3.0,
                    ),
                    suffix: None,
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R8",
                span: Span {
                    start: 137,
                    end: 151,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: -3.0,
                    exponent: Some(
                        6.0,
                    ),
                    suffix: None,
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R9",
                span: Span {
                    start: 153,
                    end: 165,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 10.0,
                    exponent: None,
                    suffix: Some(
                        Kilo,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R10",
                span: Span {
                    start: 167,
                    end: 182,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 47.0,
                    exponent: None,
                    suffix: Some(
                        Mega,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R11",
                span: Span {
                    start: 184,
                    end: 196,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 1.0,
                    exponent: None,
                    suffix: Some(
                        Milli,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R12",
                span: Span {
                    start: 198,
                    end: 212,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 220.0,
                    exponent: None,
                    suffix: Some(
                        Micro,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R13",
                span: Span {
                    start: 214,
                    end: 227,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 33.0,
                    exponent: None,
                    suffix: Some(
                        Nano,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R14",
                span: Span {
                    start: 229,
                    end: 243,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 4.7,
                    exponent: None,
                    suffix: Some(
                        Pico,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R15",
                span: Span {
                    start: 245,
                    end: 257,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 8.0,
                    exponent: None,
                    suffix: Some(
                        Femto,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R16",
                span: Span {
                    start: 259,
                    end: 271,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 1.0,
                    exponent: None,
                    suffix: Some(
                        Atto,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R17",
                span: Span {
                    start: 273,
                    end: 289,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 1.2,
                    exponent: Some(
                        -3.0,
                    ),
                    suffix: None,
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R18",
                span: Span {
                    start: 291,
                    end: 306,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: 0.123,
                    exponent: None,
                    suffix: Some(
                        Giga,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
        Resistor(
            Resistor {
                name: "R19",
                span: Span {
                    start: 308,
                    end: 324,
                },
                positive: Node {
                    name: "in",
                },
                negative: Node {
                    name: "out",
                },
                resistance: Value {
                    value: -0.99,
                    exponent: None,
                    suffix: Some(
                        Tera,
                    ),
                },
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ),
    ],
}
