crates/spicy_parser/src/snapshots/spicy_parser__parser__tests__parser-subcircuit_basic.snap
---
source: crates/spicy_parser/src/parser.rs
expression: deck
---
Deck {
    title: "basic subcircuit",
    commands: [],
    devices: [],
}
